Add advertise microservice and deployment updates

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules/
 todo.txt
 *.bak
 mock-storage/storage
+infra/aks/.terraform/
+infra/aks/.terraform.lock.hcl
+infra/aks/terraform.tfstate
+infra/aks/terraform.tfstate.*
+infra/aks/*.tfvars
